--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@typescript-eslint/eslint-plugin": "^6.1.0",
 		"@typescript-eslint/parser": "^6.1.0",
 		"bulma": "^0.9.4",
+		"csvtojson": "^2.0.10",
 		"dayjs": "^1.11.9",
 		"eslint": "^8.45.0",
 		"eslint-config-prettier": "^8.8.0",
