--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
 		"sass": "^1.66.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.6",
+		"svelte-facebook-login": "^2.0.0-rc2",
 		"svelte-preprocess": "^5.0.4",
 		"tslib": "^2.6.0",
 		"typescript": "^5.1.6",
 		"typescript-svelte-plugin": "^0.3.29",
 		"vite": "^4.4.4",
-		"vitest": "^0.33.0"
+		"vitest": "^0.33.0",
+		"wretch": "^2.7.0"
 	},
 	"type": "module"
 }
