--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
-		"css-build": "node-sass --omit-source-map-url sass/app.scss static/bulma.css",
+		"css-build-light": "node-sass --omit-source-map-url sass/lightstyle.scss static/lightstyle.css",
+		"css-build-dark": "node-sass --omit-source-map-url sass/darkstyle.scss static/darkstyle.css",
+		"css-build": "npm run css-build-light && npm run css-build-dark",
 		"css-watch": "npm run css-build -- --watch",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
